Changed some variables name

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
     <div class="button-container">
       <button id="btn1" class="myButton">Creat an Account and Airdrop</button>
-      <button id="btn2" class="myButton">Button 2</button>
-      <button id="btn3" class="myButton">Button 3</button>
+      <button id="btn2" class="myButton">Connect to Phantom Wallet</button>
+      <button id="btn3" class="myButton">Transfer SOL</button>
     </div>
     <script src="./dist/bundle.js"></script>
   </body>
